Added admin side, admin login. Updated Session class

--- a/SocialNetworkV1/SocialNetworkV1.csproj
+++ b/SocialNetworkV1/SocialNetworkV1.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminSide.cs" />
     <Compile Include="Session.cs" />
     <Compile Include="Admin.cs" />
     <Compile Include="Database.cs" />
